Port for beta.1. Implemented dynamic lighting properly, tried out several experimental concepts. Still relied on Minecraft's RenderPass system. Removed "Press O to ...".